rename: time-stamp

--- a/plugins/time-stamp/package.json
+++ b/plugins/time-stamp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TimeStamp",
+  "name": "time-stamp",
   "pluginName": "时间戳转换",
   "description": "一款开发必备的时间戳转换工具",
   "author": "gsj",
